--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ img {
   <p> </p>
   <p style="font-size:10px; color: black;"><center>coming soon</center></p>
 
+    <p style="font-size: 20px; color:#1F9AFE;">
+  <a href="contact.html"><center>Contacts</center></a>
 </p>
 
 </body>
