--- a/calculator/index.html
+++ b/calculator/index.html
@@ -86,7 +86,7 @@
         }
         button.reset-btn {
             background-color: #991c1f;
-            color: #215578;
+            color: white;
         }
         /* Style for downtime history */
         .history {
